--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 
   <section id="contacts">
     <h2>Контакты</h2>
-    <p>Адрес: г. Бишкек, ул. Примерная, 12</p>
+    <p>Адрес: г. Бишкек, ул. Карасаева, 38</p>
     <p>Телефон: +996 700 000 000</p>
     <p>WhatsApp / Telegram: @anvita_kg</p>
     <p>Email: info@anvita.kg</p>
